# random-quote

./: README.md  myproject.toml  setup.cfg  setup.py
src/: main.py
